2010-02-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcreteNumber.h: Remove unused file
	* Source/NSNumberMethods.h:
	* Source/NSNumber.m:
	* Source/GSNumberTypes.h:
	Updates to match OSX behavior.

2010-02-19 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Add check for ObjC2 support in runtime.
	* config.mak.in: define OBJC2RUNTIME to yes or no
	* configure: regenerate
	* Source/GNUmakefile: Build/link ObjectiveC2 compat code if needed
	* Source/ObjectiveC2/Availability.h:
	* Source/ObjectiveC2/runtime.c:
	* Source/ObjectiveC2/GNUmakefile:
	* Source/ObjectiveC2/properties.m:
	* Source/ObjectiveC2/sync.m:
	* Source/ObjectiveC2/blocks_runtime.m:
	Attempt to build in ObjectiveC2 compatibility functions when we don't
	have an ObjC2 runtime.

2010-02-19 Richard Frith-Macdonald <rfm@gnu.org>

	Simplify header imports with common headers handled in the correct
	order.

2010-02-18 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/NSDebug+GNUstepBase.h:
	* Headers/Additions/GNUstepBase/NSThread+GNUstepBase.h:
	* Source/Additions/NSDebug+GNUstepBase.m:
	* Source/Additions/NSThread+GNUstepBase.m:
	* Headers/Additions/GNUstepBase/Additions.h:
	* Headers/Foundation/Foundation.h:
	* Headers/Foundation/NSDebug.h:
	* Headers/Foundation/NSThread.h:
	* Source/Additions/GNUmakefile:
	* Source/DocMakefile:
	* Source/GNUmakefile:
	* Source/NSDebug.m:
	* Source/NSOperation.m:
	Move some gnustep specific extensions into additions library so they
	can be used to port apps to OSX in future (when the additions library
	builds on OSX again).

2010-02-18 Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/configure.ac: Check for latest thread ID callback
	* SSL/configure: regenerate
	* SSL/GSSSLHandle.m: Add thread-safety support callbacks.

2010-02-18 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile:
	* Headers/Foundation/NSURL.h:
	* Headers/Foundation/NSObject.h:
	* Headers/Foundation/NSString.h:
	* Headers/Foundation/NSCalendarDate.h: